--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FB6B79B44D878635451477AA853C4665
-ProjectName=First Person BP Game Template
+ProjectName=Trompi-zombies
+CompanyName=Trompinette Studio
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "EF3F20114206B17DF81DE2AF54DEECAC", "Trompi-zombies")
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +10,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
